<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">
    <TextView
            android:id="@+id/title"
            android:layout_width="303dp"
            android:layout_height="158dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
            android:layout_marginRight="56dp" android:layout_marginEnd="56dp" android:layout_alignParentStart="true"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp" android:layout_alignParentLeft="true"
            android:layout_marginBottom="-71dp" android:layout_marginTop="9dp"
            android:layout_alignParentTop="true" android:layout_above="@+id/name"/>
    <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:hint="@string/name" android:layout_alignParentBottom="true" android:layout_marginBottom="459dp"
            android:layout_alignParentStart="true" android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
            android:layout_alignParentLeft="true" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="83dp" android:layout_marginEnd="83dp"
            android:layout_alignParentTop="true"/>

    <EditText
            android:id="@+id/phno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name"
            android:layout_below="@+id/name"
            android:ems="10"
            android:hint="@string/phno" android:layout_marginLeft="0dp" android:layout_marginTop="-445dp"
            android:layout_alignParentEnd="true" android:layout_alignParentRight="true" android:layout_marginRight="0dp"
            android:layout_marginEnd="0dp"/>

    <Button
            android:id="@+id/btnAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phno"
            android:layout_below="@+id/phno"
            android:layout_marginTop="30dp"
            android:onClick="addRecord"
            android:text="@string/add"/>

    <Button
            android:id="@+id/btnShow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnAdd"
            android:layout_below="@+id/btnAdd"
            android:layout_marginTop="3dp"
            android:onClick="showAllRecords"
            android:text="@string/show" android:layout_marginLeft="0dp"/>


    <Button
            android:id="@+id/btnDelete"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnShow"
            android:layout_below="@+id/btnShow"
            android:layout_marginTop="-4dp"
            android:onClick="deleteAllRecords"
            android:text="@string/delete" android:layout_alignParentBottom="true" android:layout_marginBottom="219dp"
            android:layout_marginLeft="2dp" android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
            android:layout_marginRight="218dp" android:layout_marginEnd="218dp"/>
    <Button
            android:text="UPDATE"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:id="@+id/btnUpdate"
            android:layout_alignParentBottom="true" android:layout_marginBottom="167dp" android:layout_marginTop="103dp"
            android:onClick="updates"
            android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
            android:layout_marginRight="0dp" android:layout_marginEnd="0dp" android:layout_alignParentStart="true"
            android:layout_marginLeft="0dp" android:layout_marginStart="0dp" android:layout_alignParentLeft="true"
            android:layout_below="@+id/btnAdd"/>
    <Button
            android:text="SELECT"
            android:layout_width="408dp"
            android:onClick="select"
            android:layout_height="wrap_content" android:id="@+id/btnSelect" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="3dp" android:layout_marginEnd="3dp"
            android:layout_alignParentStart="true" android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
            android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="119dp" android:layout_alignTop="@+id/btnDelete"
            android:layout_marginTop="105dp"/>
    <EditText
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/idup" android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
            android:layout_marginRight="17dp" android:layout_marginEnd="17dp" android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp" android:layout_marginStart="15dp" android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="66dp"
            android:layout_alignTop="@+id/btnDelete" android:layout_marginTop="162dp" android:hint="ID for update"/>

    <ImageButton
            android:id="@+id/voiceBtn"
            android:background="@null"
            android:src="@drawable/ic_mic"
            android:scaleType="fitCenter"
            android:layout_width="112dp"
            android:layout_height="120dp" android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
            android:layout_marginRight="39dp" android:layout_marginEnd="39dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="500dp" android:layout_alignParentStart="true" android:layout_marginLeft="260dp"
            android:layout_marginStart="260dp" android:layout_alignParentLeft="true" android:layout_marginTop="55dp"
            android:layout_alignParentTop="true"/>
    <Button
            android:text="Delete "
            android:layout_width="wrap_content"
            android:onClick="delete"
            android:layout_height="53dp" android:id="@+id/button" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="0dp" android:layout_marginEnd="0dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="219dp" android:layout_marginTop="-2dp"
            android:layout_below="@+id/btnShow" android:layout_marginLeft="213dp" android:layout_marginStart="213dp"
            android:layout_alignLeft="@+id/btnDelete" android:layout_alignStart="@+id/btnDelete"/>

</RelativeLayout>